fix contrast ratio and mobile view problem

--- a/packages/main/src/themes/Menu.css
+++ b/packages/main/src/themes/Menu.css
@@ -67,7 +67,7 @@
 	color: var(--sapList_Active_TextColor);
 }
 
-.ui5-menu-item[focused] {
+.ui5-menu-item[focused]:not([active]) {
 	background-color: var(--sapList_Hover_Background);
 }
 
